--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>도전 골든벨 문제</title>
+  <link rel="manifest" href="/goldenbell/manifest.json">
+  <meta name="theme-color" content="#000000">
+  <link rel="apple-touch-icon" href="https://i.ibb.co/V0Q0dN4v/maskable-icon-x512.png"> <!ios에서 사용하기 위한 코드. 없으면 ios에서 동작 안됨.>
+  <meta name="apple-mobile-web-app-capable" content="yes"> <!ios에서 사용하기 위한 코드. 없으면 ios에서 동작 안됨.>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black"> <!ios에서 사용하기 위한 코드. 없으면 ios에서 동작 안됨.>
   <style>
     body {
       font-family: 'Nanum Gothic', sans-serif;
